
Development Progress	:
---------------------------

2014-07-01 (SVN):
    * move MAX_OSPATH definition to q_stdinc.h. define it as PATH_MAX,
      or as MAXPATHLEN, _MAX_PATH, MAX_PATH, or CCHMAXPATH if either of
      them is available, or as 1024 if none are available. this would
      make us safer in deep installation directory paths.  darkplaces
      engine seems to do the same.

2014-06-28 (SVN):
    * utils, jsh2color: ignore minlight values from the -light command
      line switch: eliminates the majority of the ugly black patches
      from eidolon and rider2c maps. bump its version to 1.2.6.
    * bumped the version date stamp to 2014-06-28.

2014-06-15 (SVN):
    * SDLMain.m: replace CPS* stuff with activateIgnoringOtherApps.

      CPS stuff are deprecated and emit warnings at runtime, e.g.:
	warning: CPSGetCurrentProcess(): This call is deprecated and
		 should not be called anymore
	warning: CPSSetForegroundOperationState() (as above)
	warning: capture_display; Captured mirror master 0x350000c1
		 (unit 1) on behalf of slave 0x042716c0 (unit 0)

      http://lists.libsdl.org/pipermail/sdl-libsdl.org/2006-April/055454.html
      suggests doing something like:
	ProcessSerialNumber psn = { 0, kCurrentProcess};
	TransformProcessType (&psn, kProcessTransformToForegroundApplication);
	SetFrontProcess (&psn);

      and SetFrontProcess() is deprecated in 10.9. Processes.h suggests
	[[NSApplication sharedApplication] activateIgnoringOtherApps: YES]
      to make one's own application frontmost.

2014-04-28 (SVN):
    * model.c, gl_model.c, sv_model.c (CalcSurfaceExtents): add double
      casts to floating point calculation so that 64 bit/sse2 builds'
      precision matches those of x87 floating point.  (from QuakeSpasm,
      patch by Eric Wasylishen.)

2014-04-28 (SVN):
    * gl_screen.c: fix screenshots when width isn't a multiple of 4.
      explained by Sander van Dijk.
    * bumped the version date stamp to 2014-04-28.

2014-04-27 (SVN):