@@ -58,21 +58,6 @@
 #define	DO_USERDIRS			1
 
 
-/* =====================================================================
-   USE_PASSWORD_FILE
-   Value  :	0 or 1
-   Affects:	system initialization, sys_unix.c.
-
-   Whether to use the password file to determine the path to the home
-   directory. On any sane unix system we shall get the home directory
-   based on the real uid. If this fails (not finding the user in the
-   password file isn't normal) or if you disable this, we will get it
-   by reading the HOME environment variable, only. Also see sys.h where
-   USE_PASSWORD_FILE may be disabled on purpose for some platforms.
-   =================================================================== */
-#define	USE_PASSWORD_FILE		1
-
-
 /* ====================================================================
    DISALLOW_DEMONESS_IN_OLD_GAME
    Value  :	0 or 1
