@@ -50,15 +50,7 @@ void Sys_FindClose (void);
 void Sys_MakeCodeWriteable (unsigned long startaddr, unsigned long length);
 
 
-/* UID detection */
-
-/* disable use of password file on platforms where they
-   aren't necessary or not possible. */
-#if defined(PLATFORM_DOS) || defined(PLATFORM_AMIGA) || \
-    defined(PLATFORM_WINDOWS)
-#undef	USE_PASSWORD_FILE
-#define	USE_PASSWORD_FILE	0
-#endif	/* _PASSWORD_FILE */
+/* user directories */
 
 /* disable user directories on platforms where they
  * are not necessary or not possible. */
