@@ -34,9 +34,9 @@
 
 #include <errno.h>
 #include <unistd.h>
-#if USE_PASSWORD_FILE && DO_USERDIRS
+#if DO_USERDIRS
 #include <pwd.h>
-#endif	/* USE_PASSWORD_FILE */
+#endif
 #include <sys/stat.h>
 #include <sys/time.h>
 #include <fcntl.h>
@@ -532,15 +532,12 @@ static int Sys_GetUserdir (char *dst, size_t dstsize)
 {
 	size_t		n;
 	const char	*home_dir = NULL;
-#if USE_PASSWORD_FILE
 	struct passwd	*pwent;
 
-	pwent = getpwuid( getuid() );
+	pwent = getpwuid(getuid());
 	if (pwent == NULL)
 		perror("getpwuid");
-	else
-		home_dir = pwent->pw_dir;
-#endif
+	else	home_dir = pwent->pw_dir;
 	if (home_dir == NULL)
 		home_dir = getenv("HOME");
 	if (home_dir == NULL)
